artifacthub/library/general/poddisruptionbudget/1.0.5/samples/poddisruptionbudget/example_allowed_deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-allowed-2
  namespace: default
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      example: allowed-deployment-2
  template:
    metadata:
      labels:
        app: nginx
        example: allowed-deployment-2
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
